src/bundle/Resources/public/scss/ui/modules/universal-discovery/_tab.scss
.c-udw-tab {
    height: calc(100vh - #{calculateRem(32px)});
    display: flex;
    flex-direction: column;
    transition: all $ibexa-admin-transition-duration $ibexa-admin-transition;

    &__top-bar {
        background-color: $ibexa-color-white;
        border-top-left-radius: $ibexa-border-radius;
        border-top-right-radius: $ibexa-border-radius;
        z-index: 2;
    }

    &__content {
        display: flex;
        height: 100%;
        flex-shrink: 1;
        border-top: calculateRem(1px) solid $ibexa-color-light;
        box-shadow: calculateRem(4px) calculateRem(2px) calculateRem(17px) 0 rgba($ibexa-color-black, 0.05);
    }

    &__left-sidebar {
        position: relative;
        overflow: hidden;
        margin-top: calculateRem(-1px);
        width: calculateRem(66px);
        background-color: $ibexa-color-white;
        border: calculateRem(1px) solid $ibexa-color-light;
        border-bottom: 0;
        box-shadow: calculateRem(4px) calculateRem(22px) calculateRem(47px) 0 rgba($ibexa-color-info, 0.05);
    }

    &__main {
        flex: 3;
        background-color: $ibexa-color-white;
        overflow: auto;

        &--init-locations-alert-visible {
            flex-wrap: wrap;

            .ibexa-alert {
                margin: 0;
            }

            .c-udw-tab__main-children {
                height: calc(100% - calculateRem(48px));
            }
        }
    }

    &__main-children {
        display: flex;
        height: 100%;
        width: 100%;
    }

    &__init-locations-alert-container {
        width: 100%;
    }

    &__right-sidebar {
        flex: 1;
        background-color: $ibexa-color-white;
        border-left: calculateRem(1px) solid $ibexa-color-light;
        overflow-y: auto;
    }

    &__bottom-bar {
        background-color: $ibexa-color-white;
        border-top: calculateRem(1px) solid $ibexa-color-light;
        box-shadow: calculateRem(4px) calculateRem(22px) calculateRem(47px) 0 rgba($ibexa-color-black, 0.05);
        border-bottom-left-radius: $ibexa-border-radius;
        border-bottom-right-radius: $ibexa-border-radius;
    }

    &__dropdown-portal {
        .ibexa-dropdown__items {
            position: fixed;
            z-index: 250;
        }
    }
}

.m-bookmarks-tab {
    .c-udw-tab__main {
        display: flex;
    }
}

